bases/applications/kuard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
  labels:
    app: kuard
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      name: kuard-http
  selector:
    app: kuard
